fix: removed border on connectBanner links on mobile

--- a/src/components/layout/footer/connectBanner/link.module.css
+++ b/src/components/layout/footer/connectBanner/link.module.css
@@ -32,6 +32,7 @@
     border-radius: 50%;
     margin: 7px;
     padding: 15px 6px 10px 9px;
+    border: none;
   }
 
   .linkIcon {
